2007-03-05  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in: Added brasero_0_6 branch for Brasero 

2007-04-15  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Added lsr to proposed modules. Branched sabayon in 
	2.16.

2007-04-10  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Created new GNOME 2.20 release.

2007-04-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-themes and vino for 2.18.
	Corrected link for gnome-desktop lgpl, fixes bug #427840.

2007-04-09  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-system-monitor for 2.18.

2007-04-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched gnome-keyring, libgnome, lignomeui,
	libgnomeprint for 2.18.

2007-03-31  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched file-roller for 2.18.

2007-03-31  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added a bunch of new modules in extras.
	Fixes bug #424811.

2007-03-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module accerciser in extras.
	Added gthumb-2-10 branch. 

2007-03-27  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched sound-juicer for 2.16 and 2.18.

2007-03-26  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in: Revert part of my change, I really shouldn't
	decide something that I don't have the right to.

2007-03-24  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Slightly modified language comparisons.

2007-03-24  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in: Fix some info for zh_CN team.

2007-03-21  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gdm2 branched for 2.18.

2007-03-20  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: