@@ -341,6 +341,7 @@
   <module id="gconf">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gconf-editor">
     <defaults>
