@@ -130,7 +130,7 @@
     <module id="beast"/>
     <module id="blam"/>
     <module id="bookmark-applet"/>
-    <module id="brasero"/>
+    <module id="brasero" branch="brasero_0_6"/>
     <module id="byzanz"/>
     <module id="chronojump"/>
     <module id="conglomerate"/>
@@ -260,7 +260,7 @@
       <_description>GNOME developer platform. Essential software.</_description>
       <module id="atk"/>
       <module id="gail"/>
-      <module id="gconf"/>
+      <module id="gconf" branch="gnome-2-18"/>
       <module id="glib" branch="glib-2-12"/>
       <module id="gnome-vfs" branch="gnome-2-16"/>
       <module id="gtk+" branch="gtk-2-10"/>
@@ -346,7 +346,7 @@
       <_description>GNOME developer platform.</_description>
       <module id="atk" branch="gnome-2-18"/>
       <module id="gail" branch="gnome-2-18"/>
-      <module id="gconf"/>
+      <module id="gconf" branch="gnome-2-18"/>
       <module id="glib" branch="glib-2-12"/>
       <module id="gnome-vfs" branch="gnome-2-18"/>
       <module id="gtk+" branch="gtk-2-10"/>
