@@ -1,4 +1,11 @@
-2007-03-05  Djihed Afifi  <djihed@gmail.com>
+2007-04-17  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in: 
+	* releases.xml.in: gconf branched for 2.18.
+	brasero_0_6 branch also added to releases.xml.in.
+	Corrected Changelog date for Djihed.
+
+2007-04-16  Djihed Afifi  <djihed@gmail.com>
 
 	* gnome-modules.xml.in: Added brasero_0_6 branch for Brasero 
 
